--- a/pages/sucess.html
+++ b/pages/sucess.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link href="../css/sucess.css" rel="stylesheet">
+	<link href="../css/bootstrap/css/bootstrap.css" rel="stylesheet">
   </head>
     <style>
  
@@ -13,6 +14,11 @@
       </div>
         <h1>Success</h1> 
         <p>Claim Information Submitted Successfully!</p>
+		<p class="lead">
+        <a class="btn btn-primary btn-sm" href="viewClaim.html" role="button">Continue to homepage</a>
       </div>
+	  
+	   
+	
     </body>
 </html>
