--- a/pages/editClaim.html
+++ b/pages/editClaim.html
@@ -74,7 +74,7 @@
 				
 
 				<div class="container-contact100-form-btn">
-					<div class="wrap-contact100-form-btn">
+					<div class="wrap-contact100-form-btn" style="width: 30%;">
 						<div class="contact100-form-bgbtn"></div>
 						<button class="contact100-form-btn">
 							<span>
@@ -82,6 +82,9 @@
 								<i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
 							</span>
 						</button>
+					</div>
+					<div class="wrap-contact100-form-btn"  style="width: 30%;">
+						<div class="contact100-form-bgbtn"></div>
 						<button class="contact100-form-btn">
 							<span>
 								Cancel
