--- a/pages/viewClaim.html
+++ b/pages/viewClaim.html
@@ -38,7 +38,7 @@
 									<td class="column4">ClaimPgram</td>
 									<td class="column5">01/12/2020</td>
 									<td class="column6">01/12/2020</td>
-									<td class="column6"><input type="button" value="Edit"/></td>
+									<td class="column6"><a href="./editClaim.html">Edit</a></td>
 								</tr>
 								<tr>
 									<td class="column1">2</td>
@@ -47,7 +47,7 @@
 									<td class="column4">ClaimPgram</td>
 									<td class="column5">01/12/2020</td>
 									<td class="column6">01/12/2020</td>
-									<td class="column6"><input type="button" value="Edit"/></td>
+									<td class="column6"><a href="./editClaim.html">Edit</a></td>
 								</tr>
 								
 								
